// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/DropDown multiselect snapshot 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 200,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
            "minHeight": 18,
          },
          {
            "paddingBottom": 8,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EDEFF3",
            "borderColor": "rgba(21, 28, 44, 0.2)",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 8,
            "paddingLeft": 18,
            "paddingRight": 12,
          },
          undefined,
          {
            "paddingVertical": 8,
          },
          {
            "minHeight": 48,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "rgba(43, 120, 238, 0.15)",
              "borderRadius": 8,
              "flexDirection": "row",
              "padding": 4,
              "paddingLeft": 8,
            }
          }
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#2B78EE",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 10,
                  "lineHeight": 14,
                  "minHeight": 14,
                },
                {
                  "marginRight": 4,
                },
              ]
            }
          >
            English
          </Text>
          <View
            accessibilityLabel="English"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              allowFontScaling={true}
              style={
                {
                  "color": "#2B78EE",
                  "fontFamily": "Neotis",
                  "fontSize": 16,
                }
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#353A45",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly 10 elements 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 200,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
            "minHeight": 18,
          },
          {
            "paddingBottom": 8,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EDEFF3",
            "borderColor": "rgba(21, 28, 44, 0.2)",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 8,
            "paddingLeft": 18,
            "paddingRight": 12,
          },
          undefined,
          undefined,
          {
            "height": 48,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 20,
              "minHeight": 20,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        English
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#353A45",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly 10 elements disabled 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 200,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
            "minHeight": 18,
          },
          {
            "paddingBottom": 8,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderColor": "rgba(21, 28, 44, 0.1)",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 8,
            "paddingLeft": 18,
            "paddingRight": 12,
          },
          undefined,
          undefined,
          {
            "height": 48,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 20,
              "minHeight": 20,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#353A45",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly 10 elements type valid 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 200,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
            "minHeight": 18,
          },
          {
            "paddingBottom": 8,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "rgba(43, 120, 238, 0.15)",
            "borderColor": "transparent",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 8,
            "paddingLeft": 18,
            "paddingRight": 12,
          },
          undefined,
          undefined,
          {
            "height": 48,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 20,
              "minHeight": 20,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        English
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#353A45",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly 10 elements type wrong 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 400,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "lineHeight": 16,
            "minHeight": 16,
          },
          [
            {
              "paddingBottom": 8,
            },
            {
              "paddingBottom": 8,
            },
          ],
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EDEFF3",
            "borderColor": "transparent",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 8,
            "paddingLeft": 18,
            "paddingRight": 12,
          },
          {
            "backgroundColor": "#000",
            "borderColor": "#000",
            "height": 70,
            "width": 400,
          },
          undefined,
          {
            "height": 70,
          },
          {
            "borderColor": "#000",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 20,
              "minHeight": 20,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        English
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#353A45",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly without array 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 200,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
            "minHeight": 18,
          },
          {
            "paddingBottom": 8,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EDEFF3",
            "borderColor": "rgba(21, 28, 44, 0.2)",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 8,
            "paddingLeft": 18,
            "paddingRight": 12,
          },
          undefined,
          undefined,
          {
            "height": 48,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 20,
              "minHeight": 20,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#353A45",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown renders correctly without array with text and font 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 200,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
            "minHeight": 18,
          },
          {
            "paddingBottom": 8,
          },
        ]
      }
    >
      Название поля
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
            "minHeight": 18,
          },
          {
            "color": "#F54C3D",
          },
        ]
      }
    >
      *
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EDEFF3",
            "borderColor": "rgba(21, 28, 44, 0.2)",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 8,
            "paddingLeft": 18,
            "paddingRight": 12,
          },
          undefined,
          undefined,
          {
            "height": 48,
          },
          {
            "borderColor": "transparent",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 20,
              "minHeight": 20,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        Выберите язык
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#353A45",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/DropDown selectItemClose 1`] = `
<View
  style={
    [
      {
        "justifyContent": "center",
      },
      {
        "width": 400,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "lineHeight": 18,
            "minHeight": 18,
          },
          {
            "paddingBottom": 8,
          },
        ]
      }
    >
      Название поля
    </Text>
  </View>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="selector"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#EDEFF3",
            "borderColor": "rgba(21, 28, 44, 0.2)",
            "borderRadius": 8,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 8,
            "paddingLeft": 18,
            "paddingRight": 12,
          },
          {
            "backgroundColor": "#000",
            "borderColor": "#000",
            "height": 70,
            "width": 400,
          },
          undefined,
          {
            "height": 70,
          },
          {
            "borderColor": "#000",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        numberOfLines={1}
        style={
          [
            {
              "color": "#20242D",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 20,
              "minHeight": 20,
            },
            [
              {
                "flex": 1,
              },
              undefined,
            ],
          ]
        }
      >
        English
      </Text>
      <View
        style={false}
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#353A45",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#9BA1B0",
            "fontFamily": "Neotis",
            "fontSize": 16,
            "marginRight": 4,
          }
        }
      >
        
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 10,
              "lineHeight": 14,
              "minHeight": 14,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        subtitle
      </Text>
    </View>
  </View>
</View>
`;
